bugfix, fix a zindex issue by making sure the loading.gif is behind all tweet elements

--- a/public/css/z.css
+++ b/public/css/z.css
@@ -757,6 +757,7 @@ div.growls div.large
 	box-shadow: 0 0 5px 5px rgba(15,15,15,0.1);
 	transition-duration: 0.35s;
 	transition-property: all, transform;
+	z-index: 25;
 	-khtml-border-radius: 4px;
 	-khtml-box-shadow: 0 0 5px 5px rgba(15,15,15,0.1);
 	-khtml-transition-duration: 0.35s;
